p2/confs/k3s/first-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app
  namespace: default
  labels:
    app: first-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
  template:
    metadata:
      labels:
        app: first-app
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.10.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
