p2/confs/k3s/first-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: default
spec:
  selector:
    app: first-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
