p2/confs/k3s/second-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: default
spec:
  selector:
    app: app2
  ports:
    - name: http
      port: 80
      targetPort: 8080
