p2/confs/k3s/third-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: default
spec:
  selector:
    app: app3
  ports:
    - name: http
      port: 80
      targetPort: 8080
