p2/confs/k3s/first-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-app
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: first-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: first-app
                port:
                  number: 80
